fix about button alignment

--- a/internet-art/src/style.css
+++ b/internet-art/src/style.css
@@ -599,7 +599,7 @@ p {
 
 .to-about-btn {
 	position: absolute;
-	margin-top: -30%;
+	margin-top: -20%;
 	margin-left: 20%;
 }
 
